adapted html templates

--- a/templates/post.html
+++ b/templates/post.html
@@ -1,7 +1,3 @@
----
-layout: default
----
-
 <article class="post">
   <h1>{{ page.title }}</h1>
   <div class="entry">
@@ -9,8 +5,8 @@ layout: default
   </div>
 
   <div class="date">
-    Escrito el {{ page.date | date: "%d/%m/%Y" }}
+    Escrito el {{ page.date | date(format="%d/%m/%Y") }}
   </div>
 
-  {% include disqus.html %}
+  {% include "disqus.html" %}
 </article>
