--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,9 @@
----
-layout: default
----
-
 <div class="posts">
   {% for post in site.posts %}
     <article class="post">
 
       <h1><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></h1>
-      <h5><div class="post-meta">{{ post.date | date: "%d/%m/%Y" }}</div></h5>
+      <h5><div class="post-meta">{{ post.date | date(format="%d/%m/%Y") }}</div></h5>
 
       <div class="entry">
         {{ post.excerpt }}
