--- a/templates/default.html
+++ b/templates/default.html
@@ -33,7 +33,7 @@
     </div>
 
     <div id="main" role="main" class="container">
-      {{ content }}
+        {% block content %}{% endblock content %}
     </div>
 
     <div class="wrapper-footer">
