--- a/templates/index.html
+++ b/templates/index.html
@@ -1,15 +1,15 @@
+{% extends "default.html" %}
+{% block content %}
 <div class="posts">
-  {% for post in site.posts %}
+    {% for post in posts %}
     <article class="post">
-
-      <h1><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></h1>
-      <h5><div class="post-meta">{{ post.date | date(format="%d/%m/%Y") }}</div></h5>
-
-      <div class="entry">
-        {{ post.excerpt }}
-      </div>
-
-      <a href="{{ site.baseurl }}{{ post.url }}" class="read-more">Sigue leyendo...</a>
+        <h1><a href="{{ site.baseurl | safe }}/{{ post.url }}">{{ post.title }}</a></h1>
+        <h5><div class="post-meta">{{ post.date | date(format="%d/%m/%Y") }}</div></h5>
+        <div class="entry">
+            {{ post.excerpt }}
+        </div>
+        <a href="{{ site.baseurl }}{{ post.url }}" class="read-more">Sigue leyendo...</a>
     </article>
-  {% endfor %}
+    {% endfor %}
 </div>
+{% endblock content %}
