add slug and date

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,12 +3,12 @@
 <div class="posts">
     {% for post in posts %}
     <article class="post">
-        <h1><a href="{{ site.baseurl | safe }}/{{ post.url }}">{{ post.title }}</a></h1>
+        <h1><a href="{{ site.baseurl | safe }}/{{ post.slug }}">{{ post.title }}</a></h1>
         <h5><div class="post-meta">{{ post.date | date(format="%d/%m/%Y") }}</div></h5>
         <div class="entry">
             {{ post.excerpt }}
         </div>
-        <a href="{{ site.baseurl }}{{ post.url }}" class="read-more">Sigue leyendo...</a>
+        <a href="{{ site.baseurl | safe }}/{{ post.slug }}" class="read-more">Sigue leyendo...</a>
     </article>
     {% endfor %}
 </div>
