--- a/templates/analytics.html
+++ b/templates/analytics.html
@@ -8,7 +8,7 @@
 
         ga('create', '{{ site.google_analytics }}', 'auto');
         ga('send', 'pageview', {
-          'page': '{{ site.baseurl }}{{ page.url }}',
+          'page': '{{ site.baseurl }}{{ page.slug }}',
           'title': '{{ page.title | replace(from="'", to="\\'") }}'
         });
     </script>
