--- a/templates/page.html
+++ b/templates/page.html
@@ -1,3 +1,5 @@
+{% extends "default.html" %}
+{% block content %}
 <article class="page">
 
   <h1>{{ page.title }}</h1>
@@ -5,4 +7,6 @@
   <div class="entry">
     {{ page.content }}
   </div>
+  {% include "disqus.html" %}
 </article>
+{% endblock content %}
