--- a/templates/svg-icons.html
+++ b/templates/svg-icons.html
@@ -1,18 +1,6 @@
-{% if site.footer_links.dribbble %}<a href="https://dribbble.com/{{ site.footer_links.dribbble }}"><i class="svg-icon dribbble"></i></a>{% endif %}
-{% if site.footer_links.email %}<a href="mailto:{{ site.footer_links.email }}"><i class="svg-icon email"></i></a>{% endif %}
-{% if site.footer_links.facebook %}<a href="https://www.facebook.com/{{ site.footer_links.facebook }}"><i class="svg-icon facebook"></i></a>{% endif %}
-{% if site.footer_links.flickr %}<a href="https://www.flickr.com/{{ site.footer_links.flickr }}"><i class="svg-icon flickr"></i></a>{% endif %}
-{% if site.footer_links.gitlab %}<a href="https://gitlab.com/{{ site.footer_links.gitlab }}"><i class="svg-icon gitlab"></i></a>{% endif %}
-{% if site.footer_links.instagram %}<a href="https://instagram.com/{{ site.footer_links.instagram }}"><i class="svg-icon instagram"></i></a>{% endif %}
-{% if site.footer_links.linkedin %}<a href="https://www.linkedin.com/in/{{ site.footer_links.linkedin }}"><i class="svg-icon linkedin"></i></a>{% endif %}
-{% if site.footer_links.pinterest %}<a href="https://www.pinterest.com/{{ site.footer_links.pinterest }}"><i class="svg-icon pinterest"></i></a>{% endif %}
-{% if site.footer_links.rss %}<a href="{{ site.footer_links.rss }}"><i class="svg-icon rss"></i></a>{% endif %}
-{% if site.footer_links.twitter %}<a href="https://www.twitter.com/{{ site.footer_links.twitter }}"><i class="svg-icon twitter"></i></a>{% endif %}
-{% if site.footer_links.stackoverflow %}<a href="http://stackoverflow.com/{{ site.footer_links.stackoverflow }}"><i class="svg-icon stackoverflow"></i></a>{% endif %}
-{% if site.footer_links.youtube %}<a href="https://youtube.com/{{ site.footer_links.youtube }}"><i class="svg-icon youtube"></i></a>{% endif %}
-{% if site.footer_links.googleplus %}<a href="https://plus.google.com/{{ site.footer_links.googleplus }}"><i class="svg-icon googleplus"></i></a>{% endif %}
-{% if site.footer_links.telegram %}<a href="https://telegram.me/{{ site.footer_links.telegram }}"><i class="svg-icon telegram"></i></a>{% endif %}
-{% if site.footer_links.archiveorg %}<a href="https://archive.org/details/@{{ site.footer_links.archiveorg }}"><i class="svg-icon archiveorg"></i></a>{% endif %}
-{% if site.footer_links.mastodon %}<a href="https://mastodon.social/@{{ site.footer_links.mastodon }}"><i class="svg-icon mastodon"></i></a>{% endif %}
-{% if site.footer_links.android %}<a href="https://maratonlinuxero.github.io/{{ site.footer_links.android }}"><i class="svg-icon android"></i></a>{% endif %}
+{% if site.email %}<a href="mailto:{{ site.email }}"><i class="svg-icon email"></i></a>{% endif %}
+{% if site.gitlab %}<a href="https://gitlab.com/{{ site.gitlab }}"><i class="svg-icon gitlab"></i></a>{% endif %}
+{% if site.rss %}<a href="{{ site.rss }}"><i class="svg-icon rss"></i></a>{% endif %}
+{% if site.twitter %}<a href="https://www.twitter.com/{{ site.twitter }}"><i class="svg-icon twitter"></i></a>{% endif %}
+{% if site.archiveorg %}<a href="https://archive.org/details/@{{ site.archiveorg }}"><i class="svg-icon archiveorg"></i></a>{% endif %}
 
