--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
         <h1><a href="{{ site.baseurl | safe }}/{{ post.slug }}">{{ post.title }}</a></h1>
         <h5><div class="post-meta">{{ post.date | date(format="%d/%m/%Y") }}</div></h5>
         <div class="entry">
-            {{ post.excerpt }}
+            {{ post.excerpt | safe}}
         </div>
         <a href="{{ site.baseurl | safe }}/{{ post.slug }}" class="read-more">Sigue leyendo...</a>
     </article>
