--- a/templates/page.html
+++ b/templates/page.html
@@ -5,7 +5,7 @@
   <h1>{{ page.title }}</h1>
 
   <div class="entry">
-    {{ page.content }}
+    {{ page.content | safe}}
   </div>
   {% include "disqus.html" %}
 </article>
