--- a/templates/post.html
+++ b/templates/post.html
@@ -1,18 +1,35 @@
 {% extends "default.html" %}
 {% block content %}
 <article class="post">
-  <h1>{{ post.title }}</h1>
-  <div class="entry">
-    {{ post.content | safe }}
-    {% if post.layout == "PODCAST" %}
-    <audio controls="">
-        <source src="https://archive.org/download/{{post.identifier}}/{{post.filename}}" type="audio/mpeg" />
-    </audio>
-    {% endif %}
-  </div>
-  <div class="date">
-    Escrito el {{ post.date | date(format="%d/%m/%Y") | safe }}
-  </div>
-  {% include "disqus.html" %}
+    <h1>{{ post.title }}</h1>
+    <div class="entry">
+        {{ post.content | safe }}
+        {% if post.layout == "PODCAST" %}
+        <audio controls="">
+            <source src="https://archive.org/download/{{post.identifier | safe}}/{{post.filename | safe}}" type="audio/mpeg" />
+        </audio>
+        {% endif %}
+    </div>
+    <div class="date">
+        <p>Escrito el {{ post.date | date(format="%d/%m/%Y") | safe }}</p>
+    </div>
+    <div>
+        <p>Métodos de contacto:</p>
+        <ul>
+            {% if site.twitter %}
+            <li>Twitter: <a href="https://www.twitter.com/{{ site.twitter | safe }}">@{{ site.twitter | safe }}</a></li>
+            {% endif %}
+            {% if site.email %}
+            <li>Correo: <a href="mailto:{{ site.email | safe }}">{{ site.email | safe }}</a></li>
+            {% endif %}
+            {% if site.email %}
+            <li>Web: <a href="{{ site.url | safe }}{% if site.baseurl %}/{{site.baseurl | safe }}{% endif %}">{{ site.url | safe }}{% if site.baseurl %}/{{site.baseurl | safe}}{% endif %}</a></li>
+            {% endif %}
+            {% if site.rss %}
+            <li>Feed podcast: <a href="{{ site.rss | safe }}">{{ site.rss | safe}}</a></li>
+            {% endif %}
+        </ul>
+    </div>
+    {% include "disqus.html" %}
 </article>
 {% endblock content %}
