add youtube and linktree

--- a/templates/post.html
+++ b/templates/post.html
@@ -25,6 +25,12 @@
             {% if site.email %}
             <li>Web: <a href="{{ site.url | safe }}{% if site.baseurl %}/{{site.baseurl | safe }}{% endif %}">{{ site.url | safe }}{% if site.baseurl %}/{{site.baseurl | safe}}{% endif %}</a></li>
             {% endif %}
+            {% if site.youtube %}
+            <li>Youtube: <a href="{{ site.youtube | safe }}">{{ site.youtube | safe}}</a></li>
+            {% endif %}
+            {% if site.linktree %}
+            <li>Linktr.ee: <a href="{{ site.linktree | safe }}">{{ site.linktree | safe}}</a></li>
+            {% endif %}
             {% if site.rss %}
             <li>Feed podcast: <a href="{{ site.rss | safe }}">{{ site.rss | safe}}</a></li>
             {% endif %}
