--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,5 @@
 {% extends "default.html" %}
+{% block title %}Index{% endblock title %}
 {% block content %}
 <div class="posts">
     {% for post in posts %}
