--- a/templates/post.html
+++ b/templates/post.html
@@ -1,4 +1,5 @@
 {% extends "default.html" %}
+{% block title %}{{ post.title }}{% endblock title %}
 {% block content %}
 <article class="post">
     <h1>{{ post.title }}</h1>
