--- a/templates/statistics.html
+++ b/templates/statistics.html
@@ -9,11 +9,13 @@
             <th>View</th>
         </tr>
         {% for post in posts %}
+        {% if post.layout == "PODCAST" %}
         <tr>
             <th>{{ post.number }}</th>
             <th><a href="{{ site.baseurl | safe }}/{{ post.slug }}">{{ post.title | safe}}</a></th>
             <th>{{ post.downloads }}</th>
         </tr>
+        {% enfid %}
         {% endfor %}
     </table>
 </div>
