--- a/templates/statistics.html
+++ b/templates/statistics.html
@@ -15,7 +15,7 @@
             <th><a href="{{ site.baseurl | safe }}/{{ post.slug }}">{{ post.title | safe}}</a></th>
             <th>{{ post.downloads }}</th>
         </tr>
-        {% enfid %}
+        {% endif %}
         {% endfor %}
     </table>
 </div>
