--- a/templates/statistics.html
+++ b/templates/statistics.html
@@ -12,7 +12,7 @@
         {% if post.layout == "PODCAST" %}
         <tr>
             <th style="text-align: start;">{{ post.number }}</th>
-            <th style="text-align: start;"><a href="{{ site.baseurl | safe }}/{{ post.slug }}">{{ post.title | safe}}</a></th>
+            <th style="text-align: start;"><a href="{{ url | safe }}/{{ post.slug }}">{{ post.title | safe}}</a></th>
             <th style="text-align: start;">{{ post.downloads }}</th>
         </tr>
         {% endif %}
