--- a/templates/statistics.html
+++ b/templates/statistics.html
@@ -61,7 +61,7 @@
 {% endblock head %}
 {% block content %}
 <div class="posts">
-    <table id"stats">
+    <table id="stats">
         <tr>
             <th onclick="sortTable(0)">Number</th>
             <th onclick="sortTable(1)">Title</th>
