--- a/templates/statistics.html
+++ b/templates/statistics.html
@@ -2,7 +2,11 @@
 {% block title %}Statistics{% endblock title %}
 {% block head %}
     {{ super() }}
-    <script>
+    <style>
+        th{
+            cursor: pointer;
+        }
+    </style>   <script>
     function sortTable(n) {
         var table, rows, switching, i, x, y, shouldSwitch, dir, switchcount = 0;
         table = document.getElementById("stats");
