--- a/templates/mastodon.html
+++ b/templates/mastodon.html
@@ -1,7 +1,7 @@
-Buenas muchachada, he compartido un nuevo episodio "{{episode.title}}"".
+Buenas muchachada, he compartido un nuevo episodio "{{post.title}}"".
 
 https://feeds.feedburner.com/papafriki
 
-{{ url | safe }}/{{ episode.slug }}
+{{ url | safe }}/{{ post.slug }}
 
 Ya sabéis, poco a poco irá llegando a vuestro programa de podcast favorito, a la red de SOSPECHOSOS HABITUALES, a Telegram o a YouTube
